# QuickNote

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  pages.yml  quality.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  popup.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  db.rs  lib.rs  shortcuts.rs
apps/desktop/src-tauri/src/commands/: attachments.rs  clipboard.rs  clipboard_support.rs  notes.rs  sync_commands.rs
apps/desktop/src-tauri/src/db/: causal.rs  clipboard.rs  clipboard_rows.rs  content.rs  note_rows.rs  notes_core.rs  notes_history.rs  notes_mutation.rs  sync_local.rs  sync_remote.rs  tags.rs  tests.rs
apps/desktop/src/components/: ClipboardPanel.tsx  ClipboardPopup.tsx  NoteEditor.tsx  QuickNotePopup.tsx  Sidebar.tsx
apps/desktop/src/hooks/: draftJournal.ts  useAppKeyboardShortcuts.ts  useArchiveNoteActions.ts  useClipboard.ts  useCoreNoteActions.ts  useDraftManager.ts  useNotes.ts  useSync.ts
apps/desktop/src/styles/: global.css
apps/desktop/src/utils/: tauri.ts  window.ts
apps/desktop/tests/e2e/: quicknote.spec.ts  support.ts
apps/server/: Cargo.toml  Dockerfile
apps/server/migrations/: 001_initial.sql  002_sync.sql  003_billing.sql  004_audit_and_access.sql  005_free_history_7_days.sql  006_yjs_collaboration.sql  007_tags.sql  008_search_projection.sql  009_yjs_bootstrap_lease.sql  010_yjs_delivery_ack.sql
apps/server/src/: app.rs  auth_limits.rs  config.rs  db.rs  error.rs  main.rs  middleware.rs  migrations.rs  models.rs
apps/server/src/collab/: mod.rs  store.rs  websocket.rs
apps/server/src/routes/: access.rs  attachments.rs  auth.rs  billing.rs  clipboard.rs  mod.rs  notes.rs  notes_page.rs  sync.rs
apps/server/src/routes/notes/: core.rs  helpers.rs  mutations.rs  search_trash.rs  tags.rs  tests.rs  versions.rs
apps/server/src/routes/sync/: apply.rs  changes.rs  events.rs  tests.rs  transfer.rs  validation.rs
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  MainApp.tsx  types.ts
apps/web/src/api/: client.ts
apps/web/src/components/: AccountPanel.tsx  AppToasts.tsx  ClipboardPanel.tsx  LoginPage.tsx  MobileNavigation.tsx  NoteEditor.tsx  Sidebar.tsx
apps/web/src/hooks/: useAuth.ts  useClipboard.ts  useCloudEvents.ts  useNotes.ts
apps/web/src/styles/: global.css
apps/web/tests/e2e/: collaboration.spec.ts
crates/quicknote-protocol/: Cargo.toml
crates/quicknote-protocol/src/: lib.rs  tests.rs
docs/: clipboard-sync-design.md  cloud-architecture-plan.md  markdown-view-strategy.md  open-source-and-business-model.md  reliability-sync-design.md  requirements-gap-analysis.md  webdav-compatibility.md  yjs-authority.md
server/: Cargo.toml  Dockerfile
server/migrations/: 001_initial.sql  002_sync.sql
server/src/: config.rs  db.rs  main.rs  models.rs
server/src/routes/: auth.rs  clipboard.rs  mod.rs  notes.rs  sync.rs
site/: index.html
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src-tauri/src/sync/: cloud.rs  mod.rs  webdav.rs
src/components/: ClipboardPanel.tsx  ClipboardPopup.tsx  NoteEditor.tsx  QuickNotePopup.tsx  Sidebar.tsx
src/hooks/: useNotes.ts  useSync.ts
src/styles/: global.css
tests/: docker-compose.test.yml
tests/e2e/: quicknote.spec.ts
tests/fixtures/: webdav-server.mjs
web/: index.html  nginx.conf  tsconfig.json  tsconfig.tsbuildinfo
web/src/: App.tsx  types.ts
web/src/api/: client.ts
web/src/components/: ClipboardPanel.tsx  LoginPage.tsx  NoteEditor.tsx  Sidebar.tsx
web/src/hooks/: useClipboard.ts  useNotes.ts
web/src/styles/: global.css
(+16 files in other folders)
