[package]
name = "quicknote-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
dashmap = "6"
tower-http = { version = "0.6", features = ["cors", "request-id", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
regex = "1"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
quicknote-protocol = { path = "../../crates/quicknote-protocol", features = ["sqlx"] }
yrs = "0.27"
